# serverless_expmt

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.yaml
serverless/: pyproject.toml
src/: main.py  requirements.txt
src/serverless/: __init__.py  customer  main.py  random_data_gen.py
src/serverless/libs/: connector.py  customer.py  random_data_gen.py
src/tests/: test_serverless.py
test/: README.md  template.yaml
