[tool.poetry]
name = "serverless"
version = "0.1.0"
description = ""
authors = ["Patrik Malve <pmalve11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.21"
flake8 = "^4.0.1"
mypy = "^0.961"
fastapi = "^0.78.0"
mangum = "^0.15.0"
pymongo = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
